ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sample-app-ip
    networking.gke.io/managed-certificates: sample-app-certificate
spec:
  rules:
  - host: test.example.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/*"
        backend:
          service:
            name: sample-app
            port:
              number: 8080
